syntax = "proto3";

package cosmonova.client;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmonova/client/params.proto";
import "cosmonova/client/evm_encoded_block_header_merkle.proto";

option go_package = "cosmonova/x/client/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmonova/client/params";
  
  }
  
  // Queries a list of EvmEncodedBlockHeader items.
  rpc EvmEncodedBlockHeader (QueryEvmEncodedBlockHeaderRequest) returns (QueryEvmEncodedBlockHeaderResponse) {
    option (google.api.http).get = "/cosmonova/client/evm_encoded_block_header";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryEvmEncodedBlockHeaderRequest {}

message QueryEvmEncodedBlockHeaderResponse {
  EvmEncodedBlockHeaderMerkle blockHeader = 1;
}

